# SurfaceAnisotropyCalculator

./: .gitignore  README.md  __init__.py  anisotropyclass.py  pyproject.toml  setup.py
codefiles/: __init__.py
surfaceanisotropycalculator/: CythonFunctions.pyx  __init__.py  anisotropyclass.py  stackanalysis.py
